<resources>
    <string name="app_name">RajDhani Petroleum</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="Name">Name</string>
    <string name="Designation">Designation</string>
    <string name="Contact">Contact</string>
    <string name="BasicInfo">Basic information</string>
    <string name="birth">Age</string>
    <string name="dashboard">DashBoard</string>
    <string name="createDriver">Create Driver</string>
    <string name="createDriverHead"><u><u>CREATE DRIVER</u></u></string>
    <string name="privileges"><u><u>PRIVILIGES</u></u></string>
    <string name="createAdmin">Create Sub-Admin</string>
    <string name="createAdminHead"><u><u>CREATE SUB-ADMIN</u></u></string>
    <string name="TruckDetails">Create Truck</string>
    <string name="PumpDetails">Create Pump</string>
    <string name="updateDriver"><u><u>UPDATE DRIVER INFORMATION</u></u></string>
    <string name="updateSubAdmin"><u><u>UPDATE SUB-ADMIN PROFILE</u></u></string>
    <string name="FuelRate">Fuel Rate</string>
    <string name="truckNumber">Truck Number</string>
    <string name="spinnerTitle">Select</string>
    <string name="myPreferenceTitle">myPreferenceTitle</string>
    <string name="scheduleTrip"><u><u>SCHEDULE TRIP</u></u></string>
    <string name="tripOverView"><u><u>TRIP START OVERVIEW</u></u></string>
    <string name="tripEndOverView"><u><u>TRIP END OVERVIEW</u></u></string>
    <string name="load"><u><u>LOAD</u></u></string>
    <string name="unLoad"><u><u>UNLOAD</u></u></string>
    <string name="emergencyContact"><u><u>Emergency Contact</u></u></string>
    <string name="litres">litres</string>
    <string name="google_maps_key">AIzaSyCC8AwPmh1gZLhBpYluDocq5vMZSaZTYXw</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dash_board">DashBoard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
</resources>
