<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_CreateDriver"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/createDriver" />
        <item
            android:id="@+id/nav_CreateAdmin"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/createAdmin" />
        <item
            android:id="@+id/nav_TruckDetails"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/TruckDetails" />
        <item
            android:id="@+id/nav_pumpDetails"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/PumpDetails" />
        <item
            android:id="@+id/nav_FuelRate"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/FuelRate" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
